--- a/BlazorWASM/Pages/Backlog.razor
+++ b/BlazorWASM/Pages/Backlog.razor
@@ -6,58 +6,24 @@
 @inject IBackLogService backLogService
 @inject NavigationManager navMgr
 
-<h3>Todos</h3>
-<div class="filter-bar">
-    <div class="filters-container">
-        <img src="icons/@(doShowFilters ? "clear_" : "")funnel.png" class="funnel" @onclick="@(() => doShowFilters = !doShowFilters)" alt="Funnel"/>
-        @if (doShowFilters)
-        {
-            <div class="filter">
-                <label>Username:</label>
-                <input type="text" @bind="userNameFilter"/>
-            </div>
-            <div class="filter">
-                <label>User id:</label>
-                <input type="number" @bind="userIdFilter"/>
-            </div>
-            <div class="filter">
-                <label>Is completed?</label>
-                <select @bind="completedStatusFilter">
-                    <option value="all">All</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select>
-            </div>
-            <div class="filter">
-                <label>Title contains:</label>
-                <input type="text" @bind="titleContainsFilter"/>
-            </div>
-        }
-    </div>
-</div>
+<h3>Backlogs</h3>
 
 <div>
-    <button @onclick="LoadTodos">Load</button>
+    <button @onclick="LoadBacklogs">Load backlogs</button>
 </div>
 
-@if (backlogs == null)
+@if (!backlogs.Any())
 {
-}
-else if (!backlogs.Any())
-{
-    <p>No Todos to display</p>
+    <p>No Backlogs to display</p>
 }
 else
 {
     <table class="table">
         <thead>
         <tr>
-            <th>Todo ID</th>
-            <th>Owner ID</th>
-            <th>Title</th>
-            <th>Completed?</th>
-            <th>Edit</th>
-            <th>Delete?</th>
+            <th>Name</th>
+            <th>Owner</th>
+            <th>Is completed</th>
         </tr>
         </thead>
         <tbody>
@@ -65,7 +31,7 @@ else
         {
             <tr>
                 <td>@item.name</td>
-                <td>@item.ProductOwner.UserName</td>
+                <td>@item.UserId?</td>
                 <td>@item.IsCompleted</td>
                 @* <td> *@
                 @*     <FancyCheckBox IsCompleted="@item.IsCompleted" OnChange="@(new Func<object, Task>((status) => CompleteTodo(item, status)))"></FancyCheckBox> *@
@@ -89,7 +55,7 @@ else
 }
 
 @code {
-    private ICollection<Domain.Models.Backlog> backlogs;
+    private IEnumerable<Domain.Models.Backlog>? backlogs;
     private string msg = "";
     private bool doShowFilters = false;
     private string userNameFilter;
@@ -97,17 +63,13 @@ else
     private User? user;
     private string? completedStatusFilter;
     private string? titleContainsFilter;
-
-    private async Task LoadTodos()
+    
+    protected override async Task OnInitializedAsync()
     {
+        msg = "";
         try
         {
-            bool? completedFilterValue = null;
-            if (!string.IsNullOrEmpty(completedStatusFilter) && !completedStatusFilter.Equals("all"))
-            {
-                completedFilterValue = bool.Parse(completedStatusFilter);
-            }
-            backlogs = await backLogService.GetAsync(user, completedFilterValue, titleContainsFilter);
+            backlogs = await backLogService.GetAsync();
         }
         catch (Exception e)
         {
@@ -116,9 +78,16 @@ else
         }
     }
 
+    private async Task<Task<IEnumerable<Domain.Models.Backlog>?>> LoadBacklogs()
+    {
+
+        backlogs = await backLogService.GetAsync();
+        return Task.FromResult(backlogs);
+    }
+
     private async Task CompleteTodo(Backlog item, bool status)
     {
-        BacklogUpdateDto dto = new(item.user.UserName)
+        BacklogUpdateDto dto = new(item.user?.UserName)
         {
             IsCompleted = status
         };
