--- a/BlazorWASM/Pages/Index.razor
+++ b/BlazorWASM/Pages/Index.razor
@@ -1,14 +1,14 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>SCRUM-Tool</PageTitle>
 <head>
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
    
 
     
 </head>
-<h1>Hello, world!</h1>
+<div class="name">
+<h1>SCRUM - TOOL</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+<p>Welcome to ScruM-TooL</p>
+</div>
