--- a/BlazorWASM/Shared/NavMenu.razor
+++ b/BlazorWASM/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-people" aria-hidden="true"></span> View users
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="CreateUserStory"> 
+                        <span class="oi oi-people" aria-hidden="true"></span> Create user story
+                    </NavLink>
+                </div>
     </nav>
 </div>
 
