--- a/BlazorWASM/Pages/CreateUserStory.razor
+++ b/BlazorWASM/Pages/CreateUserStory.razor
@@ -1,8 +1,37 @@
 ﻿@page "/CreateUserStory"
-<h3>CreateUserStory</h3>
-
+<div class="card">
+    <h3>Create User Story</h3>
+    <div class="form-group field">
+        <label>User Story:</label>
+        
+        <label>Title:</label>
+                <input type="text" @bind="title" @bind:event="oninput"/>
+                @if (!string.IsNullOrEmpty(resultMsg))
+                {
+                    <label style="color: @color">@resultMsg</label>
+                }
+        <label>Description:</label>
+                        <input type="text" @bind="description" @bind:event="oninput"/>
+                        @if (!string.IsNullOrEmpty(resultMsg))
+                        {
+                            <label style="color: @color">@resultMsg</label>
+                        }
+        
+        
+    </div>
+    <div class="button-row">
+        <button @onclick="Create" disabled="@(string.IsNullOrEmpty(userName))" class="acceptbtn">Create</button>
+    </div>
+</div>
 
 
 @code {
+    private string? title = "";
+    private string? description = "";
+    
+    
+    private string resultMsg = "";
+    private string color = "";
+    
     
 }
