--- a/BlazorWASM/Pages/CreateBacklog.razor
+++ b/BlazorWASM/Pages/CreateBacklog.razor
@@ -18,7 +18,7 @@
     }
     else
     {
-        <h3>Create Todo</h3>
+        <h3>Create Backlog</h3>
         <div class="form-group field">
             <label>Title:</label>
             <input type="text" @bind="backlogName"/>
