--- a/BlazorWASM/_Imports.razor
+++ b/BlazorWASM/_Imports.razor
@@ -11,3 +11,5 @@
 @using Radzen
 @using Radzen.Blazor
 @using Syncfusion.Blazor.Grids
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
