--- a/BlazorWASM/Pages/ViewUsers.razor
+++ b/BlazorWASM/Pages/ViewUsers.razor
@@ -1,4 +1,5 @@
 @page "/ViewUsers"
+@attribute [Authorize]
 @using HttpClients.ClientInterfaces
 @using global::Shared.Models
 @inject IUserService userService
