--- a/BlazorWASM/Pages/CreateBacklog.razor
+++ b/BlazorWASM/Pages/CreateBacklog.razor
@@ -3,9 +3,11 @@
 @using UIComponents
 @using global::Shared.Models
 @using global::Shared.DTOs
+@using System.Security.Claims
 @inject IUserService userService
 @inject IBackLogService backlobService
 @inject NavigationManager navMgr
+@attribute [Authorize("MustBeScrumMaster")]
 
 <div class="card">
     @if (users == null)
@@ -24,16 +26,7 @@
             <input type="text" @bind="backlogName"/>
         </div>
         
-        <div class="form-group field">
-            <label>Assignee:</label>
-            <select @bind="selectedId">
-                <option>Choose</option>
-                @foreach (User user in users)
-                {
-                <option value="@user.UserId">@user.UserName</option>
-                }
-            </select>
-        </div>
+        
         
         <div class="button-row">
             @if (!string.IsNullOrEmpty(msg))
@@ -46,7 +39,7 @@
 </div>
 
 <Modal ShowModal="showModal">
-    <p>You have successfully added a new Todo item. You should be very proud of yourself!</p>
+    <p>You have successfully added a new Backlog. You should be very proud of yourself!</p>
     <button @onclick="@Proceed">Wonderful</button>
 </Modal>
 
@@ -56,9 +49,13 @@
     private User? selectedUser;
     private string backlogName = "";
     private string msg = "";
-
-    
     private bool showModal;
+    
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthState { get; set; } = null!;
+
+    private IEnumerable<Claim>? userClaims;
+    private Claim? UserId;
 
     protected override async Task OnInitializedAsync()
     {
@@ -72,34 +69,19 @@
             Console.WriteLine(e);
             msg = e.Message;
         }
+        
+        AuthenticationState authState = await AuthState;
+        ClaimsPrincipal user = authState.User;
+        
+        userClaims = user.Claims;
+        UserId = user.FindFirst("UserId");
     }
-
+    
     private async Task Create()
     {
-        
-
-        foreach (User user in users)
-        {
-            if (user.UserId == selectedId)
-            {
-                selectedUser = user;
-            }
-        }
-        msg = "";
-        if (selectedUser == null)
-        {
-            msg = "You must select an product owner!";
-            return;
-        }
-        if (string.IsNullOrEmpty(backlogName))
-        {
-            msg = "Title cannot be empty!";
-            return;
-        }
-
         try
         {
-            BacklogCreationDto dto = new BacklogCreationDto(selectedId, backlogName);
+            BacklogCreationDto dto = new BacklogCreationDto(Int32.Parse(UserId.Value), backlogName);
             await backlobService.CreateAsync(dto);
             showModal = true;
         }
