--- a/BlazorWASM/Shared/NavMenu.razor
+++ b/BlazorWASM/Shared/NavMenu.razor
@@ -16,6 +16,21 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Login">
+                <span class="oi oi-person" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CreateUser">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create user
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ViewUsers">
+                <span class="oi oi-people" aria-hidden="true"></span> View users
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateBacklog">
                 <span class="oi oi-plus"> </span>
                 Create Backlog
@@ -28,23 +43,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="CreateUser">
-                <span class="oi oi-plus" aria-hidden="true"></span> Create user
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Login">
-                <span class="oi oi-person" aria-hidden="true"></span> Login
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ViewUsers">
-                <span class="oi oi-people" aria-hidden="true"></span> View users
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateUserStory">
-                <span class="oi oi-people" aria-hidden="true"></span> Create user story
+                <span class="oi oi-file" aria-hidden="true"></span> Create user story
             </NavLink>
         </div>
     </nav>
