--- a/BlazorWASM/Shared/NavMenu.razor
+++ b/BlazorWASM/Shared/NavMenu.razor
@@ -44,7 +44,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateUserStory">
-                <span class="oi oi-file" aria-hidden="true"></span> Create user story
+                <span class="oi oi-file" aria-hidden="true"></span> Create UserStory
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ViewUserStories">
+                <span class="oi oi-list" aria-hidden="true"></span> View UserStories
             </NavLink>
         </div>
     </nav>
