--- a/BlazorWASM/Pages/ViewUserStories.razor
+++ b/BlazorWASM/Pages/ViewUserStories.razor
@@ -25,7 +25,7 @@ else
         {
             <tr>
                 <td>@userStory.UserStoryId</td>
-                <td>@userStory.Title?</td>
+                <td>@userStory.Title</td>
                 <td>@userStory.Description</td>
             </tr>
         }
@@ -35,12 +35,10 @@ else
 
 @code {
     private IEnumerable<UserStory>? userStories;
-    private string msg = "";
 
 
     protected override async Task OnInitializedAsync()
     {
-        msg = "";
         try
         {
             userStories = await userStoryService.GetUserStories();
@@ -48,8 +46,6 @@ else
         catch (Exception e)
         {
             Console.WriteLine(e);
-            msg = e.Message;
         }
     }
-
 }
