--- a/BlazorWASM/Shared/NavMenu.razor
+++ b/BlazorWASM/Shared/NavMenu.razor
@@ -37,9 +37,9 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Backlog">
+            <NavLink class="nav-link" href="ViewBacklog">
                 <span class="oi oi-list"> </span>
-                Backlogs
+                View Backlogs
             </NavLink>
         </div>
         <div class="nav-item px-3">
