Deleted unused classes Fixed chrome source null error

--- a/BlazorWASM/Pages/CreateBacklog.razor
+++ b/BlazorWASM/Pages/CreateBacklog.razor
@@ -7,7 +7,7 @@
 @inject IUserService userService
 @inject IBackLogService backlobService
 @inject NavigationManager navMgr
-@attribute [Authorize("MustBeScrumMaster")]
+@attribute [Authorize("MustBeProductOwner")]
 
 <div class="card">
 
