--- a/BlazorWASM/Pages/Login.razor
+++ b/BlazorWASM/Pages/Login.razor
@@ -37,9 +37,9 @@
 </AuthorizeView>
 
 @code {
-    private string userName;
-    private string password;
-    private string errorLabel;
+    private string? userName;
+    private string? password;
+    private string? errorLabel;
 
     private async Task LoginAsync()
     {
