--- a/BlazorWASM/Pages/CreateUserStory.razor
+++ b/BlazorWASM/Pages/CreateUserStory.razor
@@ -3,7 +3,7 @@
 @using HttpClients.ClientInterfaces
 @using System.Security.Claims
 @inject IUserStoryService userStoryService
-@attribute [Authorize]
+@attribute [Authorize("MustBeScrumMember")]
 <div class="card">
     <h3>Create User Story</h3>
     <div class="form-group field">
